api仕様を揃える
