# backend/src/main/java/jp/ac/osaka_u/ist/sdl/kjuiceapp/controller/item/requestbody/ItemUpdateRequestBody.java
@@ -7,4 +7,4 @@ public record ItemUpdateRequestBody(
     Optional<Integer> sellingPrice,
     Optional<Integer> costPrice,
     Optional<String> category,
-    Optional<Boolean> isActive) {}
+    Optional<Boolean> active) {}
