# backend/src/main/java/jp/ac/osaka_u/ist/sdl/kjuiceapp/controller/item/responsebody/ItemResponseBody.java
@@ -8,4 +8,4 @@ public record ItemResponseBody(
     int sellingPrice,
     int costPrice,
     String category,
-    boolean isActive) {}
+    boolean active) {}
