# backend/src/main/java/jp/ac/osaka_u/ist/sdl/kjuiceapp/controller/purchase/responsebody/PurchaseResponseBody.java
@@ -2,8 +2,8 @@ package jp.ac.osaka_u.ist.sdl.kjuiceapp.controller.purchase.responsebody;
 
 public record PurchaseResponseBody(
     int historyId,
-    String userId,
-    String userName,
+    String memberId,
+    String memberName,
     String itemId,
     String itemName,
     int price,
